SimpleComplex/Database 1.x, 2018-10-15
--------------------------------------
- MsSqlResult::fetchColumn() shan't assume that a null value is null
  due to error, when no native error reported.
- Release 1.2.1.

SimpleComplex/Database 1.x, 2018-09-29
--------------------------------------
- MsSql Query native argument type helpers.
- Release 1.2.

SimpleComplex/Database 1.x, 2018-09-23
--------------------------------------
- MsSql query option result_datetime_to_time converts \DateTime to Utils Time
  to ease JSON serialization et al.
- Release 1.1.1.

SimpleComplex/Database 1.x, 2018-09-19
--------------------------------------
- Release 1.1.

SimpleComplex/Database 1.x, 2018-09-08
--------------------------------------
- Query option sql_minify remove multi-line comment containing star.

SimpleComplex/Database 1.x, 2018-08-24
--------------------------------------
- Supported error code offset by a fixed number to get out of DBMS reserved
  error code range.

SimpleComplex/Database 1.x, 2018-08-22
--------------------------------------
- Use DBMS error code as exception code.

SimpleComplex/Database 1.x, 2018-08-18
--------------------------------------
- Query option sql_minify remove multi-line comment, and trim leading/trailing
  space chars.

SimpleComplex/Database 1.x, 2018-08-12
--------------------------------------
- Result methods for depleting/traversing all sets and rows.
- MsSql more query error codes mapped.
- Tests use TestHelper's method for circumventing phpunit's propensity
  to consume all exceptions.
- Secure that overriding Validate (if such) gets used.
- Release 1.0.

SimpleComplex/Database 1.x, 2018-08-11
--------------------------------------
- Query parameter validation on query failure always reported parameter error,
  even when none.
- DbQuery methods validateArguments()/validateArgumentsStringable() protected
  because not generic across DBMSs.
- Workaround for MsSql fetch-object producing segmentation fault when passed